--- a/web/webcontent/css/home.css
+++ b/web/webcontent/css/home.css
@@ -4,10 +4,10 @@
     height: 60px;
     width: 100%;
     margin-top: 1px;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: #008040;
+    /*border-width: 1px;
+    border-style: solid;*/
+    border-radius: 0px;
+    /*border-color: #008040;*/
     overflow: hidden;
 }
 .categories>div{
@@ -27,7 +27,9 @@
     transform: translate(-50%,-50%);
     cursor: pointer;
 }
-
+.category:hover{
+    color: #000000;
+}
 /*END Categories */
 /*BEGIN header fragment*/
 .header{
@@ -50,7 +52,7 @@
 .logoBlock>img{
     margin-top: 20px;
     margin-left: 30px;
-    width: 80%;
+    height: 60%;
 }
 
 .topRightBlock{
@@ -128,7 +130,8 @@
 }
 .gridProductItem {
     /*background-color: rgba(255, 255, 255, 0.8);*/
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    /*border: 1px solid rgba(0, 0, 0, 0.8);*/
+    border: 1px solid #428aff;
     padding-bottom: 10px;
     margin-top: 20px;
     font-size: 30px;
@@ -137,9 +140,38 @@
     width: 90%;
 }
 
+.gridProductItem:hover{
+    background-color: #6dcd9a;
+    border-color: #6dcd9a;
+    cursor: pointer;
+}
+
 .productThumbnail{
     width: 100%;
 }
+
+.categoryTrending{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #d8d6d6;
+    text-transform: capitalize;
+    font-size: 26px;
+    font-weight: bold;
+    background-color: #d8d6d6;
+    color: #428aff;
+}
+.categoryTrending>p{
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.categoryTrending:hover{
+    background-color: #6dcd9a;
+    border-color: #6dcd9a;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
 /*END BodyPage*/
 
 /*BEGIN Footer*/
