--- a/web/webcontent/css/home.css
+++ b/web/webcontent/css/home.css
@@ -172,6 +172,33 @@
     cursor: pointer;
 }
 
+.advantageSearch{
+    margin-top: 20px;
+    width: 220px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #d8d6d6;
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #d8d6d6;
+    color: #428aff;
+}
+
+.advantageSearch>p{
+    margin-left: 40px;
+    margin-top: 15px;
+
+}
+
+.advantageSearch:hover{
+    background-color: #6dcd9a;
+    border-color: #6dcd9a;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
 /*END BodyPage*/
 
 /*BEGIN Footer*/
