Implement advantage search on server side

--- a/web/webcontent/css/home.css
+++ b/web/webcontent/css/home.css
@@ -101,7 +101,7 @@
     border: 1px solid #428aff;
     background: #428aff;
     text-align: center;
-    color: #f1f441;
+    color: #ffffff;
     border-radius: 5px;
     cursor: pointer;
     font-size: 20px;
