--- a/web/webcontent/css/home.css
+++ b/web/webcontent/css/home.css
@@ -137,8 +137,19 @@
     font-size: 30px;
     text-align: center;
     height: 90%;
-    width: 90%;
+    width: 280px;
 }
+
+/*@media only screen and (max-width: 700px){
+    .gridContainer {
+        margin-left: 1%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        background-color: #2196F3;
+        padding-bottom: 10px;
+    }
+}*/
 
 .gridProductItem:hover{
     background-color: #6dcd9a;
@@ -148,6 +159,7 @@
 
 .productThumbnail{
     width: 100%;
+    /*width: 250px;*/
 }
 
 .categoryTrending{
