--- a/web/webcontent/css/home.css
+++ b/web/webcontent/css/home.css
@@ -138,6 +138,11 @@ div.productPrice{
 
 
 /*BEGIN Body Page*/
+body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+}
+
 .bodyPage{
     margin-top: 20px;
     margin-bottom: 20px;    
@@ -181,7 +186,7 @@ div.layerBlur{
     grid-template-columns: auto auto auto auto;
     /*background-color: #2196F3;*/
     padding-bottom: 10px;
-    
+
 }
 .gridProductItem {
     /*background-color: rgba(255, 255, 255, 0.8);*/
@@ -234,10 +239,10 @@ div.layerBlur{
 }
 
 .categoryTrending:hover{
-/*    background-color: #6dcd9a;
-    border-color: #6dcd9a;
-    color: #f2f2f2;
-    cursor: pointer;*/
+    /*    background-color: #6dcd9a;
+        border-color: #6dcd9a;
+        color: #f2f2f2;
+        cursor: pointer;*/
 }
 
 .advantageSearch{
