--- a/web/webcontent/css/login.css
+++ b/web/webcontent/css/login.css
@@ -1,8 +1,34 @@
 .main-nav{
+    display: none;
+}
+
+#nav-logged-in>button{
+    margin: 0 auto;
+    display: block;
+}
+
+#nav-logged-in>p{
+    margin-bottom: 10px;
+}
+
+#nav-not-logged-in{
     position: relative;
     top: 30%;
     padding-left:20px;
     float:right;
+}
+
+#user-full-name{
+    color: #428aff;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+#nav-logged-in{
+    position: relative;
+    top: 5%;
+    padding-left:20px;
+    float:right;    
 }
 
 .main-nav>button{
@@ -10,8 +36,8 @@
     margin-top: 0px;
     width: 100px;
     height: 36px;
-    margin-left: auto;
-    margin-right: auto;
+/*    margin-left: auto;
+    margin-right: auto;*/
     border: 1px solid #d8d6d6;
     text-transform: capitalize;
     font-size: 16px;
